# figma2hugo

./: .gitignore  README.md  SPEC.md  figma2hugo.local.example.json  lancer-figma2hugo.bat  pyproject.toml
docs/: cahier-des-charges-responsive.md  figma-conventions-guide.html  figma-naming-conventions.md  generate_importable_crash_tests.py  generate_responsive_variant_svgs.py  responsive-figma-variants.md  robustness-test-kit.md  support-matrix.md
src/figma2hugo/: __init__.py  cli.py  config.py  gui.py  local_config.py  workflow.py
src/figma2hugo/asset_downloader/: __init__.py  downloader.py
src/figma2hugo/content_extractor/: __init__.py  extractor.py
src/figma2hugo/figma_reader/: __init__.py  mcp_client.py  rest_client.py  service.py  storage.py  url_tools.py
src/figma2hugo/generators/: __init__.py  _responsive.py  _shared.py
src/figma2hugo/generators/css/: __init__.py  generator.py
src/figma2hugo/layout_analyzer/: __init__.py  analyzer.py
src/figma2hugo/model/: __init__.py  base.py  enums.py  geometry.py  intermediate.py  report.py
src/figma2hugo/reporting/: __init__.py  writer.py
src/figma2hugo/validator/: __init__.py  validator.py
templates/hugo/: hugo.toml
templates/hugo/layouts/: index.html
templates/shared/: accordion.js
templates/static/: index.html.j2
tests/: test_asset_downloader.py  test_cli.py  test_config.py  test_content_extractor.py  test_extraction_service.py  test_generators.py  test_gui.py  test_layout_analyzer.py  test_models.py  test_repo_hygiene.py  test_url_tools.py  test_validator.py  test_workflow.py
(+27 files in other folders)
